--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+virtual/
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
