--- a/Alpha_web/requirements.txt
+++ b/Alpha_web/requirements.txt
@@ -135,6 +135,7 @@ repolib==2.2.1
 requests==2.31.0
 requests-file==1.5.1
 rich==13.7.1
+ruff==0.11.8
 scikit-learn==1.4.1.post1
 SciPy==1.11.4
 seaborn==0.13.2
