--- a/Alpha_web/requirements.txt
+++ b/Alpha_web/requirements.txt
@@ -1,181 +1,5 @@
-anyio==4.2.0
-appdirs==1.4.4
-argcomplete==3.1.4
-asgiref==3.7.2
-attrs==23.2.0
-Babel==2.10.3
-bandit==1.6.2
-beautifulsoup4==4.12.3
-blinker==1.7.0
-Bottleneck==1.3.5
-Brlapi==0.8.5
-Brotli==1.1.0
-catfish==4.16.4
-ccsm==0.9.14.2
-certifi==2023.11.17
-chardet==5.2.0
-cliapp==1.20180812.1
-click==8.1.6
-cmdtest==0.32+git
-colorama==0.4.6
-command-not-found==0.3
-compizconfig-python==0.9.14.2
-configobj==5.0.8
-contourpy==1.0.7
-cryptography==41.0.7
-cupshelpers==1.0
-cycler==0.11.0
-dbus-python==1.3.2
-decorator==5.1.1
-defer==1.0.6
-defusedxml==0.7.1
-deprecation==2.0.7
-dill==0.3.8
-distlib==0.3.8
-distro==1.9.0
-Django==4.2.11
-et-xmlfile==1.0.1
-eyed3==0.9.7
-fastjsonschema==2.19.0
-filelock==3.13.1
-filetype==1.2.0
-fonttools==4.46.0
-fs==2.4.16
-gitdb==4.0.11
-GitPython==3.1.37
-h11==0.14.0
-html2text==2024.2.26
-html5lib==1.1
-httpcore==1.0.2
-httplib2==0.20.4
-httpx==0.26.0
-idna==3.6
-ifaddr==0.2.0
-IMDbPY==2021.4.18
-importlib-metadata==4.12.0
-iniconfig==1.1.1
-isort==5.6.4
-Jinja2==3.1.2
-joblib==1.3.2
-jsonpointer==2.0
-jsonschema==4.10.3
-jupyter_core==5.3.2
-kazam==1.4.5
-kiwisolver==0.0.0
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-libevdev==0.5
-louis==3.29.0
-lxml==5.2.1
-lz4==4.0.2+dfsg
-Mako==1.3.2.dev0
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.6.3
-mdurl==0.1.2
-menulibre==2.4.0
-more-itertools==10.2.0
-mpmath==0.0.0
-mugshot==0.4.3
-multiprocess==0.70.16
-mutagen==1.46.0
-nala==0.180.0
-nbformat==5.9.1
-netaddr==0.8.0
-netifaces==0.11.0
-numexpr==2.9.0
-numpy==1.26.4
-oauthlib==3.2.2
-odfpy==1.4.2
-onboard==1.4.1
-openpyxl==3.1.2
-packaging==24.0
-pandas==2.1.4+dfsg
-patsy==0.5.6
-pbr==5.11.1
-pexpect==4.9.0
-pillow==10.2.0
-pipenv==2023.12.1
-pipx==1.4.3
-platformdirs==4.2.0
-plotly==5.15.0
-pluggy==1.4.0
-psutil==5.9.8
-psycopg2-binary==2.9.10
-ptyprocess==0.7.0
-py-cpuinfo==9.0.0
-pycairo==1.25.1
-pycparser==2.22
-pycryptodomex==3.20.0
-pycups==2.0.1
-pycurl==7.45.3
-pyelftools==0.30
-Pygments==2.17.2
-PyGObject==3.48.2
-PyICU==2.12
-PyJWT==2.7.0
-PyNaCl==1.5.0
-pyparsing==3.1.1
-pyparted==3.12.0
-pypng==0.20231004.0
-pyrsistent==0.20.0
-pytest==7.4.4
-python-apt==2.7.7+ubuntu4
-python-dateutil==2.8.2
-python-debian==0.1.49+ubuntu2
-python-gnupg==0.5.2
-pytz==2024.1
-pyudev==0.24.0
-pyxdg==0.28
-PyYAML==6.0.1
-qrcode==7.4.2
-repolib==2.2.1
-requests==2.31.0
-requests-file==1.5.1
-rich==13.7.1
-ruff==0.11.8
-scikit-learn==1.4.1.post1
-SciPy==1.11.4
-seaborn==0.13.2
-setproctitle==1.3.3
-setuptools==68.1.2
-simplejson==3.19.2
-six==1.16.0
-smmap==6.0.0
-sniffio==1.3.0
-socksio==1.0.0
-soupsieve==2.5
-sqlparse==0.4.4
-stevedore==5.1.0
-sympy==1.12
-systemd-python==235
-tables==3.9.2
-tenacity==8.2.3
-threadpoolctl==3.1.0
-tldextract==3.1.2
-toml==0.10.2
-tomli==2.0.1
-traitlets==5.5.0
-ttystatus==0.38
-typer==0.9.0
-typing_extensions==4.10.0
-ubuntu-drivers-common==0.0.0
-ufoLib2==0.16.0
-ufw==0.36.2
-unicodedata2==15.1.0
-Unidecode==1.3.8
-urllib3==2.0.7
-userpath==1.9.1
-vboxapi==1.0
-virtualenv==20.25.0+ds
-wadllib==1.3.6
-webencodings==0.5.1
-websockets==10.4
-wheel==0.42.0
-xdg==5
-xkit==0.0.0
-yt-dlp==2024.4.9
-zipp==1.0.0
-zombie-imp==0.0.2
+asgiref==3.8.1
+Django==5.2.1
+psycopg2==2.9.10
+python-dotenv==1.1.0
+sqlparse==0.5.3
