--- a/ruff.toml
+++ b/ruff.toml
@@ -28,11 +28,11 @@ exclude = [
    "venv",
    "migrations",
    "virtual",
-   "Documento", # bosetos iniciales de creación de las contraseñas para la pagina web
+   "Alpha_web/manage.py", # se ignora por defecto inicial de django
 ]
 
 # Same as Black.
-line-length = 88
+line-length = 120
 indent-width = 4
 
 target-version = "py313"
@@ -42,7 +42,7 @@ target-version = "py313"
 # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
 # McCabe complexity (`C901`) by default.
 select = ["ALL"]
-ignore = []
+ignore = ["D104","N999","D203","D212"]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
